testdata/baselines/reference/submodule/compiler/pathsValidation2.errors.txt
tsconfig.json(3,9): error TS5102: Option 'baseUrl' has been removed. Please remove it from your configuration.
  Use '"paths": {"*": "./*"}' instead.
tsconfig.json(4,9): error TS5066: Substitutions for pattern '*' shouldn't be an empty array.


==== tsconfig.json (2 errors) ====
    {
        "compilerOptions": {
            "baseUrl": ".",
            ~~~~~~~~~
!!! error TS5102: Option 'baseUrl' has been removed. Please remove it from your configuration.
!!! error TS5102:   Use '"paths": {"*": "./*"}' instead.
            "paths": {
            ~~~~~~~
!!! error TS5066: Substitutions for pattern '*' shouldn't be an empty array.
                "*": [1]
            }
        }
    }
==== a.ts (0 errors) ====
    let x = 1;